--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "ngx-daterangepicker-material": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "npm":"6.13.4"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
